[tool.poetry]
name = "deputy"
version = "0.1.0"
description = "REST API for Proxies"
authors = ["Md Zubair Beg <deputy@zube.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
python-decouple = "^3.8"
psycopg = "^3.1"
django = {extras = ["argon2"], version = "^4.2"}
django-stubs = {extras = ["compatible-mypy"], version = "^4.2"}
djangorestframework = "^3.14"
django-cors-headers = "^4.3"
django-filter = "^23.3"
drf-spectacular = "^0.26"
django-countries = {extras = ["pyuca"], version = "^7.5"}
scrapyd-client = "^1.2"
celery = {extras = ["librabbitmq"], version = "^5.3"}
django-celery-results = "^2.5"
django-celery-beat = "^2.5"
flower = "^2.0"
requests = {extras = ["socks"], version = "^2.31"}
whitenoise = {extras = ["brotli"], version = "^6.6"}
uvicorn = {extras = ["standard"], version = "^0.23"}
gunicorn = "^21.2"

[tool.poetry.group.dev.dependencies]
psycopg = {extras = ["binary"], version = "^3.1"}
pre-commit = "^3.5"
black = "^23.7"
mypy = "~1.5.1"
ruff = "^0.1.7"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14"}
celery-types = "^0.19"
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-django = "^4.5"
pytest-factoryboy = "^2.5"
pytest-mypy-plugins = "^3.0"
pytest-xdist = {extras = ["psutil"], version = "^3.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules
extend-select = ["DJ", "I", "N", "PT", "UP"]
extend-exclude = ["migrations"]
target-version = "py311"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
implicit_reexport = true
strict = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_config"
minversion = "6.0"
addopts = "-ra --cov --cov-report=term --cov-report=xml --durations=5 --numprocesses=auto --quiet --strict-markers"
python_files = ["tests.py", "test_*.py", "*_test.py"]
