[tool.poetry]
name = "deputy"
version = "0.1.0"
description = "REST API for Proxies"
authors = ["Md Zubair Beg <deputy@zube.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
python-decouple = "^3.8"
psycopg = "^3.2.1"
django = {extras = ["argon2"], version = "^4.2.14"}
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.2"}
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
django-filter = "^24.2"
drf-spectacular = "^0.27.2"
django-countries = {extras = ["pyuca"], version = "^7.6.1"}
scrapyd-client = "^1.2.3"
celery = {extras = ["librabbitmq"], version = "^5.4.0"}
django-celery-results = "^2.5.1"
django-celery-beat = "^2.6.0"
flower = "^2.0.1"
requests = {extras = ["socks"], version = "^2.32.3"}
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
uvicorn = {extras = ["standard"], version = "^0.30.1"}
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
psycopg = {extras = ["binary"], version = "^3.2.1"}
pre-commit = "^3.7.1"
black = "^24.4.2"
mypy = "~1.10.1"
ruff = "^0.5.1"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.15.0"}
celery-types = "^0.22.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"
pytest-factoryboy = "^2.7.0"
pytest-mypy-plugins = "^3.1.0"
pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules
extend-select = ["DJ", "I", "N", "PT", "UP"]
extend-exclude = ["migrations"]
target-version = "py312"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
implicit_reexport = true
strict = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_config"
minversion = "6.0"
addopts = "-ra --cov --cov-report=term --cov-report=xml --durations=5 --numprocesses=auto --quiet --strict-markers"
python_files = ["tests.py", "test_*.py", "*_test.py"]
